[package]
name = "wifi-detector"
version = "0.1.0"
authors = ["zduniusz"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
anyhow = {version = "1", features = ["backtrace"]}
embedded-svc = "0.21.3"
esp-idf-svc = "0.41.4"
esp-idf-hal = "0.37.4"
embedded-hal = "1.0.0-alpha.8"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
